fixed featured image overflow in Firefox

--- a/reuze.css
+++ b/reuze.css
@@ -63,13 +63,13 @@ table tbody tr td {color: #333; padding: 9px 10px; vertical-align: top; border: 
 
 .ac { overflow: auto; padding-top: 25px; }
 .ac p { text-align: justify; }
-.ac > * { float: left; display: table; margin: 0 0 25px 0; border-bottom: 1px solid #eee; padding-bottom: 10px; }
+.ac > * { float: left; margin: 0 0 25px 0; border-bottom: 1px solid #eee; padding-bottom: 10px; }
 .ac > *:last-child { border-bottom: none; padding-bottom: 0; }
 /* Featured Image and Captions */
 .ac .image-feat { position: relative; float: left; margin: 5px 15px 5px 0; }
 .ac .image-feat p.caption { color:#999; line-height: 1.1;font-size:11px;font-size:1.1rem;padding:4px 0 0 2px; margin: 0; }
-.ac .image-feat a img { -webkit-transition-duration: 0.4s;-moz-transition-duration: 0.4s;-o-transition-duration: 0.4s; }
-.ac .image-feat a img:hover {-webkit-box-shadow:0px 0px 3px #bcbcbc;-moz-box-shadow:0px 0px 3px #bcbcbc;box-shadow:0px 0px 3px #bcbcbc; }
+.ac .image-feat a img { -webkit-transition-duration: 0.4s;-moz-transition-duration: 0.4s;-o-transition-duration: 0.4s; max-width: 100% !important; }
+.ac .image-feat a img:hover { -webkit-box-shadow:0px 0px 3px #bcbcbc; -moz-box-shadow:0px 0px 3px #bcbcbc; box-shadow:0px 0px 3px #bcbcbc; }
 .ac header + .image-feat { padding-top: 5px; }
 /* Meta Data */
 .ac .meta { display: inline-block; margin: 3px 0; padding: 3px; border-top: 1px dotted #eee; border-bottom: 1px dotted #eee; line-height: 1.4; list-style-type: none; }
